# Proekt09

./: CMakeLists.txt  game.cpp  game.h
